[gd_scene load_steps=19 format=2]

[ext_resource path="res://scr/items/SpeedDrop.tscn" type="PackedScene" id=1]
[ext_resource path="res://scr/actors/EnemyClass.gd" type="Script" id=2]
[ext_resource path="res://assets/roundshadow.png" type="Texture" id=3]
[ext_resource path="res://scr/items/DoubleShotDrop.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/player/aim.png" type="Texture" id=5]
[ext_resource path="res://scr/items/SpinDrop.tscn" type="PackedScene" id=6]
[ext_resource path="res://scr/items/ShieldDrop.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/red circle hp.png" type="Texture" id=8]
[ext_resource path="res://scr/items/TripleShotDrop.tscn" type="PackedScene" id=9]
[ext_resource path="res://scr/items/CritDrop.tscn" type="PackedScene" id=10]
[ext_resource path="res://scr/items/MultiGunDrop.tscn" type="PackedScene" id=11]
[ext_resource path="res://scr/items/StarGunDrop.tscn" type="PackedScene" id=12]
[ext_resource path="res://scr/items/HealthDrop.tscn" type="PackedScene" id=13]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
bounce = 1.0
absorbent = true

[sub_resource type="CircleShape2D" id=2]
radius = 34.595

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 0.420448, 1.7411 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.662745, 0.117647, 0.117647, 1 ), Color( 0.898039, 0.886275, 0.0470588, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("ShootCooldown")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Light2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 3.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/Light2D:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.819608, 0.32549, 0.0823529, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Light2D:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 3.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Light2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.447059, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="RigidBody2D" groups=[
"enemies",
]]
show_behind_parent = true
collision_layer = 4
collision_mask = 23
mass = 10.0
physics_material_override = SubResource( 1 )
script = ExtResource( 2 )
mob_max_health = 4.0
drop_array = [ ExtResource( 13 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 12 ) ]

[node name="Sprite" type="Sprite" parent="."]

[node name="Light2D" type="Light2D" parent="Sprite"]
show_behind_parent = true
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
range_layer_min = -100

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 0, 32 )
rotation = 1.5708

[node name="aim" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( -0.479996, 27.7665 )
texture = ExtResource( 5 )

[node name="Light2D2" type="Light2D" parent="Sprite/aim"]
position = Vector2( 0.479996, 1.93639 )
scale = Vector2( 0.160412, 0.160412 )
texture = ExtResource( 3 )
color = Color( 0.541176, 0.054902, 0.945098, 1 )
energy = 10.0
range_layer_min = -100

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -15.9209
margin_top = -86.9826
margin_right = 24.0791
margin_bottom = -46.9826
rect_scale = Vector2( 1, 0.48 )
rect_pivot_offset = Vector2( 15.9276, 86.9535 )
step = 0.5
value = 100.0
texture_progress = ExtResource( 8 )
fill_mode = 4
tint_progress = Color( 12.72, 6.39, 5.2, 1 )
radial_initial_angle = 270.0
radial_fill_degrees = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HealthBar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -3.21865e-06, 5.24521e-06 )
scale = Vector2( 2.92835, 3.18033 )
pause_animations = false
pause_particles = false
pause_animated_sprites = false

[node name="ShootCooldown" type="Timer" parent="."]
one_shot = true

[node name="AimTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="AimTimer"]

[node name="SideTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="BounceTween" type="Tween" parent="SideTimer"]

[node name="UpTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="UpTimer"]

[node name="RespwnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 3 )
anims/default = SubResource( 4 )
anims/hit = SubResource( 5 )
